--- a/index.html
+++ b/index.html
@@ -25,22 +25,20 @@
         <h1 class="title glow">Hey SAEE! 💖</h1>
 
         <p class="heartfelt-message">
-            I just wanted to tell you how much you mean to me.  
-            Every moment with you is special, and I feel so lucky to have you in my life.  
-            You make everything feel magical… and I love you for that. ❤️
+            i know i made a huge mistake , had no intention to direspect you or hurt you but shevti mi mmanus n tu dino chuka mansan kada hota ha yecha artha ha nahi dar veles maaf kela payeh but i ur baby so u gonna baksh me  (kay aap hame bakshoge )❤️
         </p>
 
         <!-- Continue Button -->
         <div class="continue-button-container">
-            <button class="continue pop" onclick="showQuestions()">Would you like to continue?</button>
+            <button class="continue pop" onclick="showQuestions()">Would you like to continue?(yes you would🔫)</button>
         </div>
 
         <div class="question-container" id="questionContainer">
             
             <!-- Question 1 -->
             <div class="question" id="question1">
-                <p>Can you forgive me?<br>
-                <i>(It was a huge mistake. I didn’t mean to hurt you… please don’t cry, my devi.)</i></p>
+                <p>will you let your trust give me anothr chance me? ill change i promise pinky promise <br>
+                <i>(I didn’t mean to break your trust 🙏 )</i></p>
 
                 <button class="yes" onclick="nextQuestion('yes', 1)">Yes</button>
                 <button class="no" onclick="nextQuestion('no', 1)">No</button>
@@ -48,8 +46,8 @@
 
             <!-- Question 2 -->
             <div class="question" id="question2">
-                <p>Will you be my girlfriend? (I wanna be yours)<br>
-                <i>(I’m never leaving you… never even thought about it. Muwah ❤️)</i></p>
+                <p> you mine 👉👈 (I wanna be yours)<br>
+                <i>( Muwahhhhhhh ❤️)</i></p>
 
                 <button class="yes" onclick="nextQuestion('yes', 2)">Yes</button>
                 <button class="no" onclick="nextQuestion('no', 2)">No</button>
