--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
             <!-- Final message -->
             <div class="final-message" id="finalMessage">
-                <p id="responseMessage" class="typing-text"></p>
+                <p id="responseMessage"></p>
             </div>
 
         </div>
